tests/ui/suggestions/issue-99080.stderr
error[E0277]: the trait bound `usize: Meow` is not satisfied
  --> $DIR/issue-99080.rs:10:16
   |
LL |     needs_meow(1usize);
   |     ---------- ^^^^^^ the trait `Meow` is not implemented for `usize`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `Meow`:
             GlobalMeow
             LocalMeow
note: required by a bound in `needs_meow`
  --> $DIR/issue-99080.rs:7:18
   |
LL | fn needs_meow<T: Meow>(t: T) {}
   |                  ^^^^ required by this bound in `needs_meow`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
